src/test/ui/module-macro_use-arguments.stderr
error: arguments to macro_use are not allowed here
  --> $DIR/module-macro_use-arguments.rs:1:1
   |
LL | #[macro_use(foo, bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

